fixed problem with animation on smaller screens

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1563,6 +1563,7 @@ header {
 				display: flex;
 				height: 15rem;
 				justify-content: center;
+                overflow: hidden;
 				padding: 2rem;
 				position: relative;
 
